--- a/django/user_info/templates/user_info/tool_list.html
+++ b/django/user_info/templates/user_info/tool_list.html
@@ -51,6 +51,11 @@
             background-color: rgba(114, 28, 36, 0.7);
             color: #fff;
         }
+        .status-preferred {
+            background-color: rgba(255, 193, 7, 0.7);
+            color: #000;
+            margin-left: 5px;
+        }
         .tools-container {
             width: 100%;
             max-width: 1000px;
@@ -96,13 +101,9 @@
             </a>
         </div>
         <a href="{% url 'logout' %}" class="btn-logout">Logout</a>
+        <a href="{% url 'tool_create' %}" class="btn-logout" style="right: 150px;">Create New Tool</a>
         
         <div class="tools-container">
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 style="color: white;">Your API Tools</h1>
-                <a href="{% url 'tool_create' %}" class="btn-create">Create New Tool</a>
-            </div>
-            
             <div style="margin-bottom: 20px;">
                 <a href="{% url 'search' %}" style="color: white; text-decoration: none; margin-right: 20px;">
                     <span style="border-bottom: 2px solid transparent; padding-bottom: 5px;">Search</span>
@@ -131,6 +132,11 @@
                                         <span class="tool-status {% if tool.is_active %}status-active{% else %}status-inactive{% endif %}">
                                             {% if tool.is_active %}Active{% else %}Inactive{% endif %}
                                         </span>
+                                        {% if tool.is_preferred %}
+                                        <span class="tool-status status-preferred">
+                                            Preferred
+                                        </span>
+                                        {% endif %}
                                     </div>
                                 </div>
                                 <div class="tool-body">
